--- a/canvas v1/style.css
+++ b/canvas v1/style.css
@@ -10,3 +10,13 @@ canvas {
   height: 100%; 
   background: #000;
 }
+
+/* #container {
+  padding: 90px;
+  position: relative;
+  top: 50px;
+  left: 90px;
+  background: #3366ff;
+  width: 50vw;
+  height: 50vh;
+} */
