--- a/canvas/style.css
+++ b/canvas/style.css
@@ -1,32 +1,30 @@
 body {
+  position: relative;
   margin: 0;
   width: 100vw;
   height: 100vh; 
+
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
 }
 
 canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
   display: block;
   width: 100%;
   height: 100%; 
-  background: #000;
+  background: green;
+  /* z-index: -1; */
 }
 
-#container {
-  padding: 90px;
+.box {
   position: relative;
-  top: 50px;
-  left: 90px;
-  background: #3366ff;
   width: 50vw;
   height: 50vh;
-}
-
-#container2 {
-  padding: 90px;
-  position: relative;
-  bottom: 50px;
-  right: 90px;
-  background: #3366ff;
-  width: 50vw;
-  height: 50vh;
+  background: red;
+  margin: 20px;
 }
