--- a/00_canvas/style.css
+++ b/00_canvas/style.css
@@ -1,5 +1,4 @@
 body {
-  position: relative;
   margin: 0;
   width: 100vw;
   height: 100vh; 
@@ -17,14 +16,15 @@ canvas {
   display: block;
   width: 100%;
   height: 100%; 
-  background: green;
+  background: rgba(0, 0, 0, 0.5);
   /* z-index: -1; */
 }
 
-.box {
+#box1, #box2 {
+  font-size: 90px;
   position: relative;
-  width: 50vw;
-  height: 50vh;
+  width: 30vw;
+  height: 30vh;
   background: red;
   margin: 20px;
 }
